Added Single Asset ERM example
Added Single Asset ERM example
-- Source codes added to src folder
-- pdf and RData files added to results folder
-- RData files are larger than 100MB so are ignored at the moment.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 results/Section_7_3_Newsvendor/Newsvendor_VarRatio_1000Inner1000Outer1000Macro.RData
 results/Section_7_3_Newsvendor/Newsvendor_SimBudgetGrowth.RData
 results/Section_7_3_Newsvendor/Newsvendor_1000Inner1000Outer1000Macro.RData
+results/Section_7_1_SingleAssetERM/ERM_Experiment2_6Cases10000Macros.RData
+results/Section_7_1_SingleAssetERM/SingleAssetERM_1_1000Inner1000Outer10000Macro.RData
